# Fresh

./: .editorconfig  .gitattributes  .gitignore  App.axaml  App.axaml.cs  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FreshApp.csproj  MIGRATION_PLAN.md  MIGRATION_PROGRESS.md  Program.cs  README.md  SECURITY.md  ViewLocator.cs  app.manifest  index.html  main.tsx  package-lock.json  package.json  run-app.bat  tsconfig.ci.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build.yml  labeler.yml  release.yml
ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs
app/: App.tsx  router.tsx
app/app-shell/: Layout.tsx  Sidebar.tsx
app/features/: index.ts
app/features/discover/: DiscoverPage.tsx  index.ts
app/features/downloads/: DownloadsPage.tsx  index.ts
app/features/engines/: AddEngineDialog.tsx  EngineCard.tsx  EnginesPage.tsx  engineIcons.ts  engineInstallerFlow.ts  index.ts  (+2 more)
app/i18n/: index.ts
app/providers/: I18nProvider.tsx  ThemeProvider.tsx  index.ts
app/types/: build-env.d.ts  fresh-desktop.d.ts  funkhub-desktop.d.ts
docs/: RELEASE_GUIDE.md  release-post-templates.md
scripts/: build-linux.sh  build-windows.ps1  test-windows.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/desktop/: bridge.ts  init.ts
styles/: fonts.css  tailwind.css  theme.css
(+49 files in other folders)
