[package]
name = "fresh"
version = "0.1.0"
description = "Fresh desktop app"
authors = ["ImMalloy"]
edition = "2021"

[lib]
name = "fresh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
tauri-plugin-dialog = "2.0.4"
tauri-plugin-opener = "2.0.4"
tauri-plugin-updater = "2.9.1"
tauri-plugin-deep-link = "2.4.3"
tauri-plugin-single-instance = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "io-util"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
walkdir = "2.5"
regex = "1.11"
url = "2.5"
zip = "2.2"
base64 = "0.22"
dirs = "6.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
open = "5.3"
